--- a/package.json
+++ b/package.json
@@ -6,6 +6,14 @@
   "description": "https://jose-luis.com website",
   "private": true,
   "license": "MIT",
+  "homepage": "https://github.com/JL-OLEMAR/jose-olemar#readme",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/JL-OLEMAR/jose-olemar.git"
+  },
+  "bugs": {
+    "url": "https://github.com/JL-OLEMAR/jose-olemar/issues"
+  },
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
