--- a/package.json
+++ b/package.json
@@ -22,20 +22,22 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "1.9.0"
+    "@astrojs/tailwind": "3.0.1",
+    "astro": "2.0.4",
+    "tailwindcss": "3.0.24"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "5.48.1",
-    "@typescript-eslint/parser": "5.48.1",
-    "eslint": "8.31.0",
+    "@typescript-eslint/eslint-plugin": "5.49.0",
+    "@typescript-eslint/parser": "5.49.0",
+    "eslint": "8.33.0",
     "eslint-config-prettier": "8.6.0",
-    "eslint-config-standard-with-typescript": "26.0.0",
-    "eslint-plugin-astro": "0.21.1",
-    "eslint-plugin-import": "2.26.0",
-    "eslint-plugin-n": "15.6.0",
+    "eslint-config-standard-with-typescript": "33.0.0",
+    "eslint-plugin-astro": "0.23.0",
+    "eslint-plugin-import": "2.27.5",
+    "eslint-plugin-n": "15.6.1",
     "eslint-plugin-promise": "6.1.1",
-    "prettier": "2.8.2",
-    "prettier-plugin-astro": "0.7.2",
-    "typescript": "4.9.4"
+    "prettier": "2.8.3",
+    "prettier-plugin-astro": "0.8.0",
+    "typescript": "4.9.5"
   }
 }
